<resources>
    <string name="app_name">PracticaTema7</string>
    <string name="action_settings">Settings</string>

    <string name="main_title">MIS LUGARES FAVORITOS</string>
    <string name="desc_img1_main">Imagen de una bola del mundo negra</string>
    <string name="category1">BARES</string>
    <string name="category2">PUBS</string>
    <string name="category3">DISCOTECAS</string>
    <string name="category4">RESTAURANTES</string>
    <string name="category5">COFFESHOPS</string>
    <string name="default_category">Elija una categoría</string>
    <string name="delete">Borrar</string>
    <string name="edit">Editar</string>

    <string-array name="array_categorys">
        <item>@string/default_category</item>
        <item>@string/category1</item>
        <item>@string/category2</item>
        <item>@string/category3</item>e
        <item>@string/category4</item>
        <item>@string/category5</item>
    </string-array>

    <string name="name_site">Nombre</string>
    <string name="name_category">Categoría</string>
    <string name="latitud_site">Latitud</string>
    <string name="longitud_site">Longitud</string>
    <string name="rating_site">Valoración</string>
    <string name="comment_site">Comentarios</string>

    <string name="item_menu_save">Guardar</string>
    <string name="toas_correct_insert">Insert en la base de datos realizado correctamente</string>
    <string name="title_activity_maps">Map</string>


</resources>
